fixing horizontal scroll bugs

--- a/Apple/style.css
+++ b/Apple/style.css
@@ -158,12 +158,12 @@ a {
     flex-direction: row;
     gap: 25px;
 
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .section-2 .card-type-1 {
-    width: 400px;
-    height: 400px;
+    min-width: 350px;
+    max-height: 400px;
 
     display: flex;
     flex-direction: column;
@@ -201,8 +201,8 @@ a {
 }
 
 .section-2 .card-type-2 {
-    width: 400px;
-    height: 400px;
+    min-width: 350px;
+    max-height: 400px;
 
     display: flex;
     flex-direction: column;
@@ -251,6 +251,26 @@ a {
 .card-img-container-watch {
     width: 100%;
     height: 80%;
+}
+
+.card-type-2 .card-img-container-promotion img{
+    width: 80%;
+}
+
+.card-type-1 .card-img-container-bracelet {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-type-1 .card-img-container-bracelet {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-type-1 .card-img-container-bracelet img {
+    width: 50%;
 }
 
 .section-2 img {
